--- a/.gitignore
+++ b/.gitignore
@@ -408,6 +408,7 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+migrate.js
 
 # Ionide (cross platform F# VS Code tools) working folder
 **/.ionide/
